--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
@@ -89,7 +89,7 @@
                       <a class="text-small position-absolute t-3 e-3" href="#">Forgot?</a>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary" name="error">Login</button>
-                    <div id='loginErrorHandler' class='roller-text'>
+                    <div id='loginErrorHandler' class='fade-text'>
                       <p class='text-danger'>Invalid email and password combination</p>
                     </div>
                   </form>
@@ -113,8 +113,10 @@
     <!-- Vendor Scripts End -->
 
     <!-- Template Base Scripts Start -->
+    <script src="js/auth/authentication.js"></script>
     <script src="font/CS-Line/csicons.min.js"></script>
     <script src="js/base/helpers.js"></script>
+    <script src="js/auth/token-storage.js"></script>
     <script src="js/base/globals.js"></script>
     <script src="js/base/nav.js"></script>
     <script src="js/base/search.js"></script>
