Add first and last name to authentication

--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
@@ -86,7 +86,7 @@
                     <div class="mb-3 filled form-group tooltip-end-top">
                       <i data-cs-icon="lock-off"></i>
                       <input class="form-control pe-7" name="password" type="password" placeholder="Password" />
-                      <a class="text-small position-absolute t-3 e-3" href="#">Forgot?</a>
+                      <!--<a class="text-small position-absolute t-3 e-3" href="#">Forgot?</a>-->
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary" name="error">Login</button>
                     <div id='loginErrorHandler' class='fade-text'>
