--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Register.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Register.html
@@ -115,12 +115,15 @@
                         <input type="checkbox" class="form-check-input" id="registerCheck" name="registerCheck" />
                         <label class="form-check-label" for="registerCheck">
                           I have read and accept the
-                          <a href="index.html" target="_blank">terms and conditions.</a>
+                          <a href="Legal.html" target="_blank">terms and conditions.</a>
                         </label>
                       </div>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary">Signup</button>
                   </form>
+                  <div id='registerErrorHandler' class='fade-text'>
+                    <p class='text-danger'>User already exists with this email.</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -141,6 +144,8 @@
     <!-- Vendor Scripts End -->
 
     <!-- Template Base Scripts Start -->
+    <script src="js/auth/authentication.js"></script>
+    <script src="js/auth/token-storage.js"></script>
     <script src="font/CS-Line/csicons.min.js"></script>
     <script src="js/base/helpers.js"></script>
     <script src="js/base/globals.js"></script>
