Add icon to category & fix bar chart in overview

--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
@@ -119,6 +119,7 @@
 
 <!-- Template Base Scripts Start -->
 <script src="font/CS-Line/csicons.min.js"></script>
+<script src="js/auth/token-storage.js"></script>
 <script src="js/base/helpers.js"></script>
 <script src="js/base/globals.js"></script>
 <script src="js/base/nav.js"></script>
