--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Login.html
@@ -47,15 +47,15 @@
               <div class="w-100 w-lg-75 w-xxl-50">
                 <div>
                   <div class="mb-5">
-                    <h1 class="display-3 text-white">Multiple Niches</h1>
-                    <h1 class="display-3 text-white">Ready for Your Project</h1>
+                    <h1 class="display-3 text-white">What is</h1>
+                    <h1 class="display-3 text-white">Expense Tacker?</h1>
                   </div>
                   <p class="h6 text-white lh-1-5 mb-5">
-                    Dynamically target high-payoff intellectual capital for customized technologies. Objectively integrate emerging core competencies before
-                    process-centric communities...
+                    Expense Tracker is an online application that allows users to upload transactions into categories and break them down accordingly.
+                    This was a project by Casey Mershon to develop skills on API creation, CI/CD workflows, and server management.
                   </p>
                   <div class="mb-5">
-                    <a class="btn btn-lg btn-outline-white" href="index.html">Learn More</a>
+                    <a class="btn btn-lg btn-outline-white" target="_blank" href="https://caseymershon.co/">Learn More</a>
                   </div>
                 </div>
               </div>
