Update Category endpoint to accept PUT request

--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+data-footer="true"
+data-override='{"attributes": {"placement": "horizontal","layout": "boxed" }, "showSettings":false, "storagePrefix": "starter-project"}'
+>>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -104,7 +107,25 @@
                 <p>This document was last updated on July 24, 2021</p>
             </div>
           </main>
-
+          <!-- Layout Footer Start -->
+          <footer>
+            <div class="footer-content">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12 col-sm-6">
+                    <p class="mb-0 text-muted text-medium">Casey Mershon <span id="page-year">2021</span></p>
+                  </div>
+                  <div class="col-sm-6 d-none d-sm-block">
+                    <ul class="breadcrumb pt-0 pe-0 mb-0 float-end">
+                      <li class="breadcrumb-item mb-0 text-medium"><a href="Legal.html" class="btn-link">Terms & Conditions</a></li>
+                      <li class="breadcrumb-item mb-0 text-medium"><a href="#" class="btn-link">Docs</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+          <!-- Layout Footer End -->
 </div>
 
 <!-- Vendor Scripts Start -->
