--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Overview.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Overview.html
@@ -2,7 +2,7 @@
 <html
   lang="en"
   data-footer="true"
-  data-override='{"attributes": {"placement": "horizontal","layout": "fluid" }, "showSettings":false, "storagePrefix": "starter-project"}'
+  data-override='{"attributes": {"placement": "horizontal","layout": "boxed" }, "showSettings":false, "storagePrefix": "starter-project"}'
 >
   <head>
     <meta charset="UTF-8" />
@@ -69,7 +69,7 @@
                 <div class="col-6 ps-1 pe-1">
                   <ul class="list-unstyled">
                     <li>
-                      <a href="#">
+                      <a href="Docs.Guides.GettingStarted.html">
                         <i data-cs-icon="help" class="me-2" data-cs-size="17"></i>
                         <span class="align-middle">Help</span>
                       </a>
@@ -80,7 +80,7 @@
                 <div class="col-6 pe-1 ps-1">
                   <ul class="list-unstyled">
                     <li>
-                      <a href="#">
+                      <a href="Docs.html">
                         <i data-cs-icon="document-full" class="me-2" data-cs-size="17"></i>
                         <span class="align-middle">Docs</span>
                       </a>
