--- a/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/Legal.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"
+<html 
+lang="en"
 data-footer="true"
 data-override='{"attributes": {"placement": "horizontal","layout": "boxed" }, "showSettings":false, "storagePrefix": "starter-project"}'
->>
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -100,7 +101,7 @@ data-override='{"attributes": {"placement": "horizontal","layout": "boxed" }, "s
                 <p>We reserve the right to modify this Agreement or its terms related to the Website and Services at any time at our discretion. When we do, we will revise the updated date at the bottom of this page. We may also provide notice to you in other ways at our discretion, such as through the contact information you have provided.</p>
                 <p>An updated version of this Agreement will be effective immediately upon the posting of the revised Agreement unless otherwise specified. Your continued use of the Website and Services after the effective date of the revised Agreement (or such other act specified at that time) will constitute your consent to those changes.</p>
                 <h2>Acceptance of these terms</h2>
-                <p>You acknowledge that you have read this Agreement and agree to all its terms and conditions. By accessing and using the Website and Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to access or use the Website and Services. This terms and conditions policy was created with the <a target="_blank" href="https://www.websitepolicies.com/terms-and-conditions-generator">terms and conditions generator</a>.</p>
+                <p>You acknowledge that you have read this Agreement and agree to all its terms and conditions. By accessing and using the Website and Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to access or use the Website and Services.</p>
                 <h2>Contacting us</h2>
                 <p>If you have any questions, concerns, or complaints regarding this Agreement, we encourage you to contact us using the details below:</p>
                 <p>&#104;e&#108;&#108;o&#64;c&#97;&#115;&#101;ym&#101;&#114;sho&#110;.&#99;o</p>
